creation lien page

--- a/accueil.html
+++ b/accueil.html
@@ -5,7 +5,6 @@
     <link rel="stylesheet" href="normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <meta name="Tours-tech-valley">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link type="text/css" rel="stylesheet" href="accueil.css">
     <title>Tours Tech Valley</title>
@@ -18,39 +17,39 @@
             <h1>Tours Tech Valley</h1>
         </div>
         <nav class="navbar">
-            <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
+            <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png" alt="Menu"></button>
             <ul class="nav__list">
-                <li><a href="index.html">ACCUEIL</a></li>
-                <li><a href="ecosysteme.html">ECOSYSTEME DU NUMERIQUE</a></li>
-                <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
-                <li><a href="#qualvie">QUALITE DE VIE</a></li>
-                <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="accueil.html">ACCUEIL</a></li>
+                <li><a href="numerique.html">ECOSYSTEME DU NUMERIQUE</a></li>
+                <li><a href="economie.html">DYNAMISME ECONOMIQUE</a></li>
+                <li><a href="lavie.html">QUALITE DE VIE</a></li>
+                <li><a href="contacts.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
     <section class="bloc_article">
-        <article class="category2"><img src="Images/Image-acceuil/MAME.jpg" class="category-image" title="lorum">
-            <h2><a href="ecosysteme.html"> Le numérique</a></h2>
+        <article class="category2"><img src="Images/Image-acceuil/MAME.jpg" class="category-image" title="mame" alt="mame">
+            <h2><a href="numerique.html"> Le numérique</a></h2>
         </article>
         <div class="article_desktop">
-            <article class="category"><img src='Images/Image-acceuil/tours.jpg' class="category-image" title="lorum">
-                <h2>L'économie</h2>
+            <article class="category"><img src='Images/Image-acceuil/tours.jpg' class="category-image" title="tours" alt="tours">
+                <h2><a href="economie.html">L'économie</a></h2>
             </article>
-            <article class="category"><img src="Images/Image-acceuil/La-vie.jpg" class="category-image" title="lorum">
-                <h2>La vie à Tours</h2>
+            <article class="category"><img src="Images/Image-acceuil/La-vie.jpg" class="category-image" title="vie" alt="vie">
+                <h2><a href="lavie.html">La vie à Tours</a></h2>
             </article>
         </div>
     </section>
     <footer>
         <ul class="contact">
-            <li>Contact Us</li>
-            <a href="https://www.votre_url.com"></a><img class="reseaux"
-                    src="Images/Images reseaux sociaux/Facebook.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="Images/Images reseaux sociaux/Instagram.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="Images/Images reseaux sociaux/Twitter.png"></a>
-            <li>Annuaire</li>
+            <li><a href="contacts.html">Contact Us</a></li>
+            <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Facebook.png"></li>
+            <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Instagram.png"></li>
+            <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Twitter.png"></li>
+            <li><a href="contacts.html">Annuaire</a></li>
         </ul>
     </footer>
 
