--- a/economie.html
+++ b/economie.html
@@ -21,11 +21,11 @@
         <nav class="navbar">
             <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
             <ul class="nav__list">
-                    <li><a href="#accueil">ACCUEIL</a></li>
-                    <li><a href="#econum">ECOSYSTEME DU NUMERIQUE</a></li>
-                    <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
-                    <li><a href="#qualvie">QUALITE DE VIE</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="accueil.html">ACCUEIL</a></li>
+                    <li><a href="numerique.html">ECOSYSTEME DU NUMERIQUE</a></li>
+                    <li><a href="economie.html">DYNAMISME ECONOMIQUE</a></li>
+                    <li><a href="lavie.html">QUALITE DE VIE</a></li>
+                    <li><a href="contacts.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -58,16 +58,16 @@
         </div>
     </section>
     <footer>
-        <ul class="contact">
-            <li>Contact Us</li>
-            <a href="https://www.facebook.com/mametours/"><img class="reseaux"
-                    src="images/Images reseaux sociaux/Facebook.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="images/Images reseaux sociaux/Instagram.png"></a>
-            <a href="https://twitter.com/mametours"><img class="reseaux"
-                    src="images/Images reseaux sociaux/Twitter.png"></a>
-            <li>Annuaire</li>
-        </ul>
+            <ul class="contact">
+                    <li><a href="contacts.html">Contact Us</a></li>
+                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                            src="Images/Images_reseaux_sociaux/Facebook.png"></li>
+                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                            src="Images/Images_reseaux_sociaux/Instagram.png"></li>
+                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                            src="Images/Images_reseaux_sociaux/Twitter.png"></li>
+                    <li><a href="contacts.html">Annuaire</a></li>
+                </ul>
     </footer>
     <script>
             document.addEventListener('DOMContentLoaded', () => {
