--- a/numerique.html
+++ b/numerique.html
@@ -21,11 +21,11 @@
         <nav class="navbar">
             <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
             <ul class="nav__list">
-                    <li><a href="index.html">ACCUEIL</a></li>
-                    <li><a href="ecosysteme.html">ECOSYSTEME DU NUMERIQUE</a></li>
-                    <li><a href="#dynaeco">DYNAMISME ECONOMIQUE</a></li>
-                    <li><a href="#qualvie">QUALITE DE VIE</a></li>
-                    <li><a href="#contact">CONTACT</a></li>
+                    <li><a href="accueil.html">ACCUEIL</a></li>
+                    <li><a href="numerique.html">ECOSYSTEME DU NUMERIQUE</a></li>
+                    <li><a href="economie.html">DYNAMISME ECONOMIQUE</a></li>
+                    <li><a href="lavie.html">QUALITE DE VIE</a></li>
+                    <li><a href="contacts.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -35,9 +35,9 @@
             <article>
                 <img src="images/entreprise/capgemini.png">
                 <div class="contenu_article">
-                    <h3>Cap gemini : </h3>
+                    <h3>Capgemini </h3>
                     <p>Capgemini est un leader mondial du conseil, des services informatiques et de la transformation numérique. A la pointe de l’innovation, le Groupe aide ses clients à saisir l’ensemble des opportunités que présentent le cloud, le digital et les plateformes.</p>
-                    <a href="">4bis Rue Emile Zola, 37000 Tours</a>
+                    <a href="contacts.html">4bis Rue Emile Zola, 37000 Tours</a>
                 </div>
             </article>
             <hr />
@@ -46,7 +46,7 @@
                 <div class="contenu_article">
                     <h3>Apside TOP </h3>
                     <p>Depuis 40 ans, le Groupe Apside collabore aux projets informatiques et scientifiques des grands groupes français et européens.</p>
-                    <a href="">12 Rue Fabienne Landy, 37700 Saint-Pierre-des-Corps</a>
+                    <a href="contacts.html">12 Rue Fabienne Landy, 37700 Saint-Pierre-des-Corps</a>
                 </div>
             </article>
             <hr />
@@ -55,7 +55,7 @@
                 <div class="contenu_article">
                     <h3>Umanis</h3>
                     <p>Depuis plus de 25 ans, Umanis est le leader français en Data, Digital, Business Solutions et Industrialisation.</p>
-                    <a href="">18 Rue du Pont de l'Arche, 37550 Saint-Avertin</a>
+                    <a href="contacts.html">18 Rue du Pont de l'Arche, 37550 Saint-Avertin</a>
                 </div>
             </article>
         </div>
@@ -68,7 +68,7 @@
                 <div class="contenu_article">
                     <h3>La MAME</h3>
                     <p>Mame, cité de 	la création et de l’innovation : aux jeunes entreprises innovantes et à de grands groupes nationaux qui y installent des bureaux. Tiers lieu de connexion dans l'écosystème French Tech-Loire Valley.</p>
-                    <a href="">49 Boulevard Preuilly, 37000 Tours</a>
+                    <a href="contacts.html">49 Boulevard Preuilly, 37000 Tours</a>
                 </div>
             </article>
             <article class="inverse">
@@ -77,7 +77,7 @@
                     <h3>Pepinieres (S)tart’inbox</h3>
                     <p>Pepinieres (S)tart’inbox crée un environnement favorable à l’esprit d’entreprise sur le territoire. D'une surface de 1200 m² , elle est raccordée à la fibre et desservies par le tramway.
                        </p>
-                    <a href="">30 Rue André Theuriet, 37000 Tours</a>
+                    <a href="contacts.html">30 Rue André Theuriet, 37000 Tours</a>
                 </div>
             </article>
             <article>
@@ -85,22 +85,22 @@
                 <div class="contenu_article">
                     <h3>Paloaltours</h3>
                     <p>Palaoltours est une startup associative d’entreprises innovantes dans le domaine des technologies numériques.</p>
-                    <a href="">LE HQ Tours - 1, impasse du palais, 37000 Tours</a>
+                    <a href="contacts.html">LE HQ Tours - 1, impasse du palais, 37000 Tours</a>
                 </div>
             </article>
         </div>
     </section>
     <footer>
-        <ul class="contact">
-            <li>Contact Us</li>
-            <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="images/Images_reseaux_sociaux/Facebook.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="images/Images_reseaux_sociaux/Instagram.png"></a>
-            <a href="https://www.votre_url.com"><img class="reseaux"
-                    src="images/Images_reseaux_sociaux/Twitter.png"></a>
-            <li>Annuaire</li>
-        </ul>
+            <ul class="contact">
+                    <li><a href="contacts.html">Contact Us</a></li>
+                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                            src="Images/Images_reseaux_sociaux/Facebook.png"></li>
+                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                            src="Images/Images_reseaux_sociaux/Instagram.png"></li>
+                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
+                            src="Images/Images_reseaux_sociaux/Twitter.png"></li>
+                    <li><a href="contacts.html">Annuaire</a></li>
+                </ul>
     </footer>
     <script>
             document.addEventListener('DOMContentLoaded', () => {
