--- a/contacts.html
+++ b/contacts.html
@@ -15,11 +15,11 @@
     <header>
         <img class="headerbackground" src="Images/banniere/mame-desktop.jpg" alt="backgroundarticle">
         <div class="desktop_title">
-            <img class="logo" src="Images/Image-acceuil/logo_1.png">
+            <img class="logo" src="Images/Image-acceuil/logo_1.png" alt="logo">
             <h1>Tours Tech Valley</h1>
         </div>
         <nav class="navbar">
-            <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
+            <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png" alt="Menu"></button>
             <ul class="nav__list">
                 <li><a href="accueil.html">ACCUEIL</a></li>
                 <li><a href="economie.html">ECOSYSTEME DU NUMERIQUE</a></li>
@@ -168,12 +168,12 @@
     <footer>
         <ul class="contact">
             <li><a href="contacts.html">Contact Us</a></li>
-            <li><a href="https://www.votre_url.com"></a><img class="reseaux"
-                    src="Images/Images_reseaux_sociaux/Facebook.png"></li>
-            <li><a href="https://www.votre_url.com"></a><img class="reseaux"
-                    src="Images/Images_reseaux_sociaux/Instagram.png"></li>
-            <li><a href="https://www.votre_url.com"></a><img class="reseaux"
-                    src="Images/Images_reseaux_sociaux/Twitter.png"></li>
+            <li><a href="https://facebook.com/mametours/"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Facebook.png" alt="facebook"></li>
+            <li><a href="https://www.instagram.com/mame.tours/?hl=fr"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Instagram.png" alt="intagram"></li>
+            <li><a href="https://twitter.com/mametours"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Twitter.png" alt="twitter"></li>
             <li><a href="contacts.html">Annuaire</a></li>
         </ul>
     </footer>
