--- a/economie.html
+++ b/economie.html
@@ -15,17 +15,17 @@
     <header>
         <img class="headerbackground" src="Images/banniere/La-vie.jpg" alt="backgroundarticle">
         <div class="desktop_title">
-            <img class="logo" src="Images/Image-acceuil/logo_1.png">
+            <img class="logo" src="Images/Image-acceuil/logo_1.png" alt="logo">
             <h1>Tours Tech Valley</h1>
         </div>
         <nav class="navbar">
-            <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png"></button>
+            <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png" alt="Menu"></button>
             <ul class="nav__list">
-                    <li><a href="accueil.html">ACCUEIL</a></li>
-                    <li><a href="numerique.html">ECOSYSTEME DU NUMERIQUE</a></li>
-                    <li><a href="economie.html">DYNAMISME ECONOMIQUE</a></li>
-                    <li><a href="lavie.html">QUALITE DE VIE</a></li>
-                    <li><a href="contacts.html">CONTACT</a></li>
+                <li><a href="accueil.html">ACCUEIL</a></li>
+                <li><a href="numerique.html">ECOSYSTEME DU NUMERIQUE</a></li>
+                <li><a href="economie.html">DYNAMISME ECONOMIQUE</a></li>
+                <li><a href="lavie.html">QUALITE DE VIE</a></li>
+                <li><a href="contacts.html">CONTACT</a></li>
             </ul>
         </nav>
     </header>
@@ -33,52 +33,61 @@
         <h2>L'économie à Tours</h2>
         <div class="bloc_article">
             <article>
-                <img src="images/logo_ecosysteme2/emploi.jpg">
+                <img src="images/logo_ecosysteme2/emploi.jpg" alt="emploi">
                 <div class="contenu_article">
                     <h3>L'emploi</h3>
-                    <p>Le chômage y est inférieur au niveau national, les activités restent diversifiées et positionnées sur des technologies stratégiques (digital, pharmaceutique, agroalimentaire), très ouvertes à l’international.</p>
+                    <p>Le chômage y est inférieur au niveau national, les activités restent diversifiées et positionnées
+                        sur des technologies stratégiques (digital, pharmaceutique, agroalimentaire), très ouvertes à
+                        l’international.</p>
                 </div>
             </article>
             <hr />
             <article class="inverse">
-                <img src="images/logo_ecosysteme2/Touraine.jpg">
+                <img src="images/logo_ecosysteme2/Touraine.jpg" alt="touraine">
                 <div class="contenu_article">
                     <h3>Le tourisme</h3>
-                    <p>L’Indre-et-Loire est le premier département touristique du Val de Loire, son appareil de formation et de recherche publique est performant, avec ses 27.000 étudiants, ses 2.500 chercheurs également présents à l’INRA et au CEA, ses écoles de commerce et d’ingénieurs, son Institut du médicament, son campus de start-up, une hausse de 5 % des entrées dans l’apprentissage</p>
+                    <p>L’Indre-et-Loire est le premier département touristique du Val de Loire, son appareil de
+                        formation et de recherche publique est performant, avec ses 27.000 étudiants, ses 2.500
+                        chercheurs également présents à l’INRA et au CEA, ses écoles de commerce et d’ingénieurs, son
+                        Institut du médicament, son campus de start-up, une hausse de 5 % des entrées dans
+                        l’apprentissage</p>
                 </div>
             </article>
             <hr />
             <article>
-                <img src="images/logo_ecosysteme2/solary.png">
+                <img src="images/logo_ecosysteme2/solary.png" alt="solary">
                 <div class="contenu_article">
                     <h3>Des univers variés</h3>
-                    <p>La variété des entreprises tourangelle permet de laisser parler la matière, grise, électrique, numérique, naturelle ou brute de fonderie : Escape Yourself, Bertucelli, RDV Productions, Alienor France, Belorr, Solary TV Productions, Lestra, Le Kiosque Gourmand, Edgar Opticiens, SKF, Supra Technologies…</p>
+                    <p>La variété des entreprises tourangelle permet de laisser parler la matière, grise, électrique,
+                        numérique, naturelle ou brute de fonderie : Escape Yourself, Bertucelli, RDV Productions,
+                        Alienor France, Belorr, Solary TV Productions, Lestra, Le Kiosque Gourmand, Edgar Opticiens,
+                        SKF, Supra Technologies…</p>
                 </div>
             </article>
         </div>
     </section>
     <footer>
-            <ul class="contact">
-                    <li><a href="contacts.html">Contact Us</a></li>
-                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
-                            src="Images/Images_reseaux_sociaux/Facebook.png"></li>
-                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
-                            src="Images/Images_reseaux_sociaux/Instagram.png"></li>
-                    <li><a href="https://www.votre_url.com"></a><img class="reseaux"
-                            src="Images/Images_reseaux_sociaux/Twitter.png"></li>
-                    <li><a href="contacts.html">Annuaire</a></li>
-                </ul>
+        <ul class="contact">
+            <li><a href="contacts.html">Contact Us</a></li>
+            <li><a href="https://facebook.com/mametours/"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Facebook.png" alt="facebook"></li>
+            <li><a href="https://www.instagram.com/mame.tours/?hl=fr"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Instagram.png" alt="intagram"></li>
+            <li><a href="https://twitter.com/mametours"></a><img class="reseaux"
+                    src="Images/Images_reseaux_sociaux/Twitter.png" alt="twitter"></li>
+            <li><a href="contacts.html">Annuaire</a></li>
+        </ul>
     </footer>
     <script>
-            document.addEventListener('DOMContentLoaded', () => {
-        document.querySelector('.nav__burger').addEventListener('click', (e) => {
-            const $burger = e.currentTarget;
-            const $list = $burger.parentElement.querySelector('.nav__list');
-            $burger.classList.toggle('nav__burger--active');
-            $list.classList.toggle('nav__list--active');
-        });
-    })
-</script>
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelector('.nav__burger').addEventListener('click', (e) => {
+                const $burger = e.currentTarget;
+                const $list = $burger.parentElement.querySelector('.nav__list');
+                $burger.classList.toggle('nav__burger--active');
+                $list.classList.toggle('nav__list--active');
+            });
+        })
+    </script>
 </body>
 
 </html>
