--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://fonts.googleapis.com/css?family=Oswald&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link type="text/css" rel="stylesheet" href="accueil.css">
+    <link type="text/css" rel="stylesheet" href="index.css">
     <title>Tours Tech Valley</title>
 </head>
 
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png" alt="Menu"></button>
             <ul class="nav__list">
-                    <li><a href="accueil.html">ACCUEIL</a></li>
+                    <li><a href="index.html">ACCUEIL</a></li>
                 <li><a href="numerique.html">ECOSYSTEME DU NUMERIQUE</a></li>
                 <li><a href="economie.html">DYNAMISME ECONOMIQUE</a></li>
                 <li><a href="lavie.html">QUALITE DE VIE</a></li>
@@ -49,7 +49,7 @@
                     src="Images/Images_reseaux_sociaux/Instagram.png" alt="intagram"></li>
             <li><a href="https://twitter.com/mametours"></a><img class="reseaux"
                     src="Images/Images_reseaux_sociaux/Twitter.png" alt="twitter"></li>
-            <li><a href="contacts.html">Annuaire</a></li>
+            <li><a href="contacts.php">Annuaire</a></li>
         </ul>
     </footer>
 
