--- a/numerique.html
+++ b/numerique.html
@@ -21,11 +21,11 @@
         <nav class="navbar">
             <button class="nav__burger"><img src="Images/Image-acceuil/Hamburger_icon.png" alt="Menu"></button>
             <ul class="nav__list">
-                <li><a href="accueil.html">ACCUEIL</a></li>
+                <li><a href="index.html">ACCUEIL</a></li>
                 <li><a href="numerique.html">ECOSYSTEME DU NUMERIQUE</a></li>
                 <li><a href="economie.html">DYNAMISME ECONOMIQUE</a></li>
                 <li><a href="lavie.html">QUALITE DE VIE</a></li>
-                <li><a href="contacts.html">CONTACT</a></li>
+                <li><a href="contacts.php">CONTACT</a></li>
             </ul>
         </nav>
     </header>
